# netflix_data_analytics

./: .gitignore  README.md  profiles.yml.example  pyproject.toml
.github/workflows/: dbt-ci.yml
netflix/: README.md  dbt_project.yml
netflix/analyses/: genre_trend_analysis.sql  movie_analysis.sql  user_segmentation_analysis.sql
netflix/macros/: full_table_null_check.sql  generate_schema_name.sql
netflix/models/: sources.yml
netflix/models/dim/: dim_genome_tags.sql  dim_movies.sql  dim_movies_with_tags.sql  dim_users.sql  schema.yml
netflix/models/fct/: ep_movies_with_tags.sql  fct_genome_scores.sql  fct_ratings.sql  schema.yml
netflix/models/mart/: mart_genre_performance.sql  mart_movie_release_dates.sql  mart_movies_enriched.sql  mart_top_rated_movies.sql  mart_user_activity.sql  schema.yml
netflix/models/staging/: schema.yml  src_genome_score.sql  src_genome_tags.sql  src_links.sql  src_movies.sql  src_ratings.sql  src_tags.sql
netflix/snapshots/: snap_tags.sql
netflix/tests/: relevance_score_test.sql
